<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currentBetText"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginTop="320dp"
        android:gravity="center"
        android:text="@string/currentBet"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/playerAvatar1"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:src="@drawable/default_player_avatar" />

            <TextView
                android:id="@+id/playerName1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerName1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chipCount1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/player1ChipCount"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/playerAvatar2"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:src="@drawable/default_player_avatar" />

            <TextView
                android:id="@+id/playerName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerName2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chipCount2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/player2ChipCount"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/player3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/playerAvatar3"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:src="@drawable/default_player_avatar" />

            <TextView
                android:id="@+id/playerName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerName3"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chipCount3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/player3ChipCount"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/player4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/playerAvatar4"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:src="@drawable/default_player_avatar" />

            <TextView
                android:id="@+id/playerName4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerName4"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chipCount4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/player4ChipCount"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/player5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/playerAvatar5"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:src="@drawable/default_player_avatar" />

            <TextView
                android:id="@+id/playerName5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerName5"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chipCount5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/player5ChipCount"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/activTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activTurn"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="375sp"
        android:layout_height="80sp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/leftButton"
            android:layout_width="125sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/left_button"
            android:text="@string/check"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="20sp" />

        <Button
            android:id="@+id/centerButton"
            android:layout_width="125sp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/centre_button"
            android:onClick="raiseButtonClick"
            android:text="@string/raise"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="20sp" />

        <Button
            android:id="@+id/rightButton"
            android:layout_width="125sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/right_button"
            android:text="@string/pass"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/betWindow"
        android:layout_width="375sp"
        android:layout_height="75sp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/chips"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2sp"
            android:layout_marginBottom="2sp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bet5"
                android:layout_width="198sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="Bet 5"
                android:scaleType="fitCenter"
                android:src="@drawable/chip5" />


            <ImageButton
                android:id="@+id/bet10"
                android:layout_width="198sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="Bet 10"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/chip10" />

            <ImageButton
                android:id="@+id/bet25"
                android:layout_width="198sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="Bet 5"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/chip25_middle" />

            <ImageButton
                android:id="@+id/bet50"
                android:layout_width="198sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="Bet 5"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/chip50" />

            <ImageButton
                android:id="@+id/bet100"
                android:layout_width="198sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="Bet 5"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/chip100" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/playerChipsCountText"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginBottom="92dp"
        android:gravity="center"
        android:text="@string/playerChipsCount"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/passConfirmBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/passConfirm"
        android:layout_width="375sp"
        android:layout_height="234sp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passConfirmBg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:gravity="center"
            android:text="@string/passConfirm"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="340sp"
            android:layout_height="70sp"
            android:layout_marginTop="50sp"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/passConfirmNo"
                android:layout_width="75sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/right_button"
                android:text="Нет"
                android:textSize="34sp" />

            <Button
                android:id="@+id/passConfirmYes"
                android:layout_width="75sp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30sp"
                android:layout_weight="1"
                android:backgroundTint="@color/centre_button"
                android:text="Да"
                android:textSize="34sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>